# Installer

./: .gitignore  CMakeLists.txt  README.md
Server/: config.txt  info.txt
client/: CMakeLists.txt
client/screens/: choose_functional.ui  choose_path.ui  finish.ui  greeting.ui  main.ui  program_choose.ui
client/src/: abstract_screen.hpp  choose_functional.cpp  finish.cpp  finish.hpp  greeting.cpp  greeting.hpp  main.cpp  mainwindow.hpp  program_choose.cpp
client/src/managers/: registry_manager.cpp  registry_manager.hpp
client/src/types/: types.hpp
client/src/utils/: utils.cpp  utils.hpp
python_server/: config.json  main.py
screens/: choose_path.ui  finish.ui  greeting.ui  main.ui  program_choose.ui
src/: choose_functional.cpp  choose_functional.hpp  choose_path.cpp  choose_path.hpp  finish.cpp  finish.hpp  greeting.cpp  greeting.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  program_choose.cpp  program_choose.hpp
src/managers/: network_manager.cpp  network_manager.hpp  registry_manager.cpp  registry_manager.hpp
src/types/: types.cpp  types.hpp
src/utils/: utils.cpp  utils.hpp
с++_server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
